# fusen

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: input_method.rs  lib.rs  main.rs
src/application/: useAppSettings.ts  useGlobalShortcuts.ts  useNotesController.ts
src/domain/: note.ts  recentFiles.ts  settings.ts
src/editor/: MarkdownEditor.tsx  markdownKeys.ts  markdownPreview.ts
src/infrastructure/: fileDialogService.ts  inputMethodService.ts  noteRepository.ts  settingsRepository.ts
src/presentation/: SettingsMenu.tsx  Sidebar.tsx  StatusBar.tsx  Topbar.tsx
src/styles/: base.css  components.css  editor.css  layout.css  themes.css
