[package]
name = "fusen"
version = "0.1.0"
description = "A lightweight Markdown sticky note app"
authors = ["fusen"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "fusen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
